Fix card stretch

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -7,9 +7,14 @@
   max-width: catalog-width(200px, 48px, 40px);
   min-width: catalog-width(200px, 48px, 40px);
   margin: 0 auto;
+  align-items: flex-start;
 
   &__card {
     margin-bottom: 46px;
+  }
+
+  &__card:nth-last-child(-n + 4) {
+    margin-bottom: 0;
   }
 
   &__card:not(:nth-child(4n)) {
