--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -25,7 +25,7 @@
     }
 
     &__item:not(:last-child) {
-      margin: 0 20px 0 0;
+      margin-right: 20px;
     }
 
     &__link {
